# Safe-Flow-Decomposition

./: .gitignore  CMakeLists.txt  README.md  data.py  data_1000.py  data_1000.xlsx  excel.py  plot.py  prepare.py  profile.py  test.py  time.sh
algo/: ConRep.cpp  ConRepT.cpp  OptCon.cpp  OptConH.cpp  OptRaw.cpp  OptRep.cpp  OptRepH.cpp  RawRep.cpp  RawRepT.cpp  complete.cpp  concise.cpp  concise_wo_heur.cpp  old_concise.cpp  old_raw.cpp  optimal.cpp  raw.cpp
data/catfish/: data.xlsx  data_1000.xlsx
data/refsim/: data.xlsx
include/: complete.hpp  concise.hpp  concise_graph.hpp  debug.hpp  graph.hpp  io.hpp  main.hpp  node.hpp  old.hpp  old_concise.hpp  old_raw.hpp  optimal.hpp  raw.hpp  raw_graph.hpp  test.hpp  trie.hpp  utility.hpp
src/: complete.cpp  concise.cpp  concise_graph.cpp  graph.cpp  io.cpp  old.cpp  old_concise.cpp  old_raw.cpp  optimal.cpp  raw.cpp  raw_graph.cpp  trie.cpp
test/: ConRep.cpp  ConRepT.cpp  OptCon.cpp  OptConH.cpp  OptRaw.cpp  OptRep.cpp  OptRepH.cpp  RawRep.cpp  RawRepT.cpp  complete.cpp  concise.cpp  concise_wo_heur.cpp  graph.cpp  io.cpp  old_concise.cpp  old_raw.cpp  optimal.cpp  optimal_wo_heur.cpp  raw.cpp  test.graph  test.hpp  test.truth  truth.hpp  truth.txt
